--- a/http/css/style.css
+++ b/http/css/style.css
@@ -816,8 +816,8 @@ header h1 a img {
     background: #fff;
 }
 .message-div iframe {
-    width: 400px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
 }
 
 /*==================================RESPONSIVE LAYOUTS===============================================*/
